Various cleanups in cluster-operator (#9178)
Signed-off-by: Mickael Maison <mickael.maison@gmail.com>